@@ -2,6 +2,6 @@
 Name=Kylin Printer
 Name[zh_CN]=麒麟打印
 Exec=/usr/bin/kylin-printer
-Icon=/usr/share/pixmaps/printer_logo.svg
+Icon=kylin-printer
 Terminal=false
 Type=Application
