@@ -1,3 +1,9 @@
+kylin-printer (1.0.7kord~rc4) v101; urgency=medium
+
+  * 修复bug#33691：添加本地驱动文件选择弹窗UI问题
+
+ -- baijincheng <baijincheng@kylinos.cn>  Tue, 3 Feb 2021 16:52:00 +0800
+
 kylin-printer (1.0.7kord~rc3) v101; urgency=medium
 
   * 修复bug#36525：手动安装界面更改打印机位置，安装成功后查看设备，位置仍显示Office
